--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -22,7 +22,7 @@
 }
 
 .pie-pagina .grupo-2{
-    background-color: #232725;
+    background-color: #4d4e4e;
     padding: 15px 10px;
     text-align: center;
     color: #fff;
